# wholistic_reg

./: .gitignore  main.py  main_template.py  main_template_interactive.py  main_test.py  main_test100.py  main_test100_2x.py  make_3d_projection.py  make_overlay_movie.py  make_qc_full.py  make_qc_outputs.py  make_qc_processed.py  make_registered_movie.py  preprocess_nd2_test.py  preprocess_nd2_to_zarr.py  preprocess_test100.py  pyproject.toml
wholistic_registration/: .gitignore  LICENSE  README.md  pyproject.toml
wholistic_registration/src/wholistic_registration/: pipeline.py  pipeline_vmsr.py
wholistic_registration/src/wholistic_registration/archive/: demo_toy.py  test_wbi.ipynb
wholistic_registration/src/wholistic_registration/configs/: config_0120.toml  config_default.toml  config_f2013.toml  config_f2013_0206.toml  config_f2013_0225.toml  config_f338.toml
wholistic_registration/src/wholistic_registration/core/: Registration_v2.md  main_function.py
wholistic_registration/src/wholistic_registration/demos/: config.toml  demo2d.py  demo_0805.ipynb  demo_0805_f2013.ipynb  demo_0822.ipynb  demo_0907.ipynb  demo_0912.ipynb  demo_338.py  demo_f338.ipynb  demo_toy_data.py  generateSimulation.ipynb  test_edge_map.py  test_f2013.py  test_f2013_reference.py
wholistic_registration/src/wholistic_registration/macros/: LoadTiffList.ijm  ShowCaDownsample.ijm  ShowMemDownsample.ijm
wholistic_registration/src/wholistic_registration/pipeline/: HighResolution.md  pipeline.md
wholistic_registration/src/wholistic_registration/simulations/: SaveMat2Xlsx.m  average_eva.m  evaluate_all_methods.m  generate_simulation.m
wholistic_registration/src/wholistic_registration/tests/: test.py  test_HR.ipynb  test_mask.ipynb  test_vectorization.py  zarr_to_tiffseries.py
wholistic_registration/src/wholistic_registration/utils/: IO.py  ImmuneCell.py  (+15 more)
(+28 files in other folders)
