[project]
name = "wholistic-reg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ipykernel",
    "wholistic-registration",
    "zarrs",
    "zarr",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "numpy>=2.4.3",
    "cupy-cuda11x>=13.6.0",
]

[tool.uv.workspace]
members = [
    "wholistic_registration",
]

[tool.uv.sources]
wholistic-registration = { workspace = true }
